[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/loading.gd" type="Script" id=1]
[ext_resource path="res://Assets/cow/running/cow1.png" type="Texture" id=2]
[ext_resource path="res://Assets/cow/running/cow5.png" type="Texture" id=3]
[ext_resource path="res://Assets/cow/running/cow3.png" type="Texture" id=4]
[ext_resource path="res://Assets/cow/running/cow2.png" type="Texture" id=5]
[ext_resource path="res://Assets/cow/running/cow4.png" type="Texture" id=6]
[ext_resource path="res://Scenes/grass-back.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/grass_front.tscn" type="PackedScene" id=8]
[ext_resource path="res://Shaders/background.shader" type="Shader" id=9]
[ext_resource path="res://Assets/ground/ground-top.png" type="Texture" id=10]
[ext_resource path="res://Assets/water/water.png" type="Texture" id=11]
[ext_resource path="res://Assets/font.theme" type="Theme" id=12]
[ext_resource path="res://Assets/ground/ground-mid.png" type="Texture" id=13]
[ext_resource path="res://Assets/UI/loading.png" type="Texture" id=14]
[ext_resource path="res://Assets/UI/cursor.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ) ],
"loop": true,
"name": "New Anim",
"speed": 10.0
} ]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 9 )
shader_param/OCTAVE = 10
shader_param/mulscale = 8.3
shader_param/height = 0.515
shader_param/tide = 0.088
shader_param/foamthickness = 0.2
shader_param/timescale = 0.0
shader_param/waterdeep = 2.63
shader_param/WATER_COL = Color( 0.04, 0.38, 0.88, 1 )
shader_param/WATER2_COL = Color( 0.960784, 0.6, 0.847059, 1 )
shader_param/FOAM_COL = Color( 1, 1, 1, 1 )
shader_param/speed = 1.0

[sub_resource type="TileSet" id=3]
0/name = "ground-mid.png 0"
0/texture = ExtResource( 13 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "ground-top.png 1"
1/texture = ExtResource( 10 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="Loading" type="Node2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 17 )
frames = SubResource( 1 )
animation = "New Anim"
frame = 1
playing = true

[node name="Camera2D" type="Camera2D" parent="AnimatedSprite"]
position = Vector2( 0, -16 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_bottom = 96

[node name="grass-back" parent="." instance=ExtResource( 7 )]
material = null
position = Vector2( -32, 16 )
z_index = -1
frame = 2

[node name="grass_front" parent="grass-back" instance=ExtResource( 8 )]
material = null
position = Vector2( 8, 10.6667 )
z_index = 1
frame = 3
script = null

[node name="grass-back2" parent="." instance=ExtResource( 7 )]
material = null
position = Vector2( 16, 16 )
z_index = -1
frame = 2

[node name="grass_front2" parent="grass-back2" instance=ExtResource( 8 )]
material = null
position = Vector2( 8, 10.6667 )
z_index = 1
frame = 3
script = null

[node name="grass-back3" parent="." instance=ExtResource( 7 )]
material = null
position = Vector2( 0, 16 )
z_index = -1
frame = 2

[node name="grass_front3" parent="grass-back3" instance=ExtResource( 8 )]
material = null
position = Vector2( 8, 10 )
z_index = 1
frame = 3
script = null

[node name="grass-back4" parent="." instance=ExtResource( 7 )]
material = null
position = Vector2( -16, 16.6667 )
z_index = -1
frame = 2

[node name="grass_front4" parent="grass-back4" instance=ExtResource( 8 )]
material = null
position = Vector2( 8, 10 )
z_index = 1
frame = 3
script = null

[node name="grass-back5" parent="." instance=ExtResource( 7 )]
material = null
position = Vector2( -48, 16 )
z_index = -1
frame = 2

[node name="grass_front4" parent="grass-back5" instance=ExtResource( 8 )]
material = null
position = Vector2( 8, 10 )
z_index = 1
frame = 3
script = null

[node name="grass-back6" parent="." instance=ExtResource( 7 )]
material = null
position = Vector2( -64, 16 )
z_index = -1
frame = 2

[node name="grass_front4" parent="grass-back6" instance=ExtResource( 8 )]
material = null
position = Vector2( 8, 10 )
z_index = 1
frame = 3
script = null

[node name="grass-back7" parent="." instance=ExtResource( 7 )]
material = null
position = Vector2( -80, 16 )
z_index = -1
frame = 2

[node name="grass_front4" parent="grass-back7" instance=ExtResource( 8 )]
material = null
position = Vector2( 8, 10 )
z_index = 1
frame = 3
script = null

[node name="grass-back8" parent="." instance=ExtResource( 7 )]
material = null
position = Vector2( -96, 16.6667 )
z_index = -1
frame = 2

[node name="grass_front4" parent="grass-back8" instance=ExtResource( 8 )]
material = null
position = Vector2( 8, 10 )
z_index = 1
frame = 3
script = null

[node name="grass-back9" parent="." instance=ExtResource( 7 )]
material = null
position = Vector2( -112, 16 )
z_index = -1
frame = 2

[node name="grass_front4" parent="grass-back9" instance=ExtResource( 8 )]
material = null
position = Vector2( 8, 10 )
z_index = 1
frame = 3
script = null

[node name="grass-back10" parent="." instance=ExtResource( 7 )]
material = null
position = Vector2( 32, 16 )
z_index = -1
frame = 2

[node name="grass_front4" parent="grass-back10" instance=ExtResource( 8 )]
material = null
position = Vector2( 8, 10 )
z_index = 1
frame = 3
script = null

[node name="grass-back11" parent="." instance=ExtResource( 7 )]
material = null
position = Vector2( 48, 16 )
z_index = -1
frame = 2

[node name="grass_front4" parent="grass-back11" instance=ExtResource( 8 )]
material = null
position = Vector2( 8, 10 )
z_index = 1
frame = 3
script = null

[node name="grass-back12" parent="." instance=ExtResource( 7 )]
material = null
position = Vector2( 64, 16 )
z_index = -1
frame = 2

[node name="grass_front4" parent="grass-back12" instance=ExtResource( 8 )]
material = null
position = Vector2( 8, 10 )
z_index = 1
frame = 3
script = null

[node name="grass-back13" parent="." instance=ExtResource( 7 )]
material = null
position = Vector2( 80, 16 )
z_index = -1
frame = 2

[node name="grass_front4" parent="grass-back13" instance=ExtResource( 8 )]
material = null
position = Vector2( 8, 10 )
z_index = 1
frame = 3
script = null

[node name="grass-back14" parent="." instance=ExtResource( 7 )]
material = null
position = Vector2( 96, 16 )
z_index = -1
frame = 2

[node name="grass_front4" parent="grass-back14" instance=ExtResource( 8 )]
material = null
position = Vector2( 8, 10 )
z_index = 1
frame = 3
script = null

[node name="background" type="Sprite" parent="."]
modulate = Color( 0.894118, 0.894118, 0.894118, 1 )
material = SubResource( 2 )
position = Vector2( -224, -126.667 )
scale = Vector2( 14, 8 )
z_index = -10
texture = ExtResource( 11 )
centered = false

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -17.0
margin_top = 44.0
margin_right = 243.0
margin_bottom = 226.0
rect_scale = Vector2( 0.12, 0.1 )
theme = ExtResource( 12 )
text = " Loading
"
fit_content_height = true
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = -105.0
margin_top = 53.0
margin_right = 1489.0
margin_bottom = 144.0
rect_scale = Vector2( 0.06, 0.06 )
theme = ExtResource( 12 )
text = " Tip: Do you belive farting is real? Think twice"
fit_content_height = true
scroll_active = false

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 196601, 1, 0, 196602, 1, 0, 196603, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0 )

[node name="loading" type="Sprite" parent="."]
position = Vector2( 95, 51 )
texture = ExtResource( 14 )

[node name="cursor" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
z_index = 100
texture = ExtResource( 15 )

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = -104.0
margin_top = -59.0
margin_right = 2776.0
margin_bottom = 123.0
rect_scale = Vector2( 0.05, 0.05 )
theme = ExtResource( 12 )
text = " If one eye is bigger than the other, change the zoom using the scroll wheel
 IDK how to fix it"
fit_content_height = true
scroll_active = false
